*SVN*

* Added support for calling constrained class methods on has_many and has_and_belongs_to_many collections #1764 [Tobias Luetke]

    class Comment < AR:B
      def self.search(q)
        find(:all, :conditions => ["body = ?", q])
      end
    end 

    class Post < AR:B
      has_many :comments
    end

    Post.find(1).comments.search('hi') # => SELECT * from comments WHERE post_id = 1 AND body = 'hi'
  
  NOTICE: This patch changes the underlying SQL generated by has_and_belongs_to_many queries. If your relying on that, such as
  by explicitly referencing the old t and j aliases, you'll need to update your code. Of course, you _shouldn't_ be relying on
  details like that no less than you should be diving in to touch private variables. But just in case you do, consider yourself
  noticed :)

* Added migration support for SQLite (using temporary tables to simulate ALTER TABLE) #1771 [Sam Stephenson]

* Remove extra definition of supports_migrations? from abstract_adaptor.rb [Nicholas Seckar]

* Fix acts_as_list so that moving next-to-last item to the bottom does not result in duplicate item positions

* Fixed incompatibility in DB2 adapter with the new limit/offset approach #1718 [Maik Schmidt]

* Added :select option to find which can specify a different value than the default *, like find(:all, :select => "first_name, last_name"), if you either only want to select part of the columns or exclude columns otherwise included from a join #1338 [Stefan Kaes]


*1.11.1* (11 July, 2005)

* Added support for limit and offset with eager loading of has_one and belongs_to associations. Using the options with has_many and has_and_belongs_to_many associations will now raise an ActiveRecord::ConfigurationError #1692 [Rick Olsen]

* Fixed that assume_bottom_position (in acts_as_list) could be called on items already last in the list and they would move one position away from the list #1648 [tyler@kianta.com]
