@@ -22,23 +22,11 @@ PKG_FILES = FileList[
 
 
 desc "Default Task"
-task :default => [ :test_ruby_mysql, :test_mysql_ruby, :test_sqlite, :test_sqlite3, :test_postgresql ]
+task :default => [ :test_mysql, :test_sqlite, :test_postgresql ]
 
 # Run the unit tests
 
-Rake::TestTask.new("test_ruby_mysql") { |t|
-  t.libs << "test" << "test/connections/native_mysql"
-  t.pattern = 'test/*_test{,_mysql}.rb'
-  t.verbose = true
-}
-
-Rake::TestTask.new("test_mysql_ruby") { |t|
-  t.libs << "test" << "test/connections/native_mysql"
-  t.pattern = 'test/*_test{,_mysql}.rb'
-  t.verbose = true
-}
-
-for adapter in %w( postgresql sqlite sqlite3 sqlserver sqlserver_odbc db2 oci )
+for adapter in %w( mysql postgresql sqlite sqlite3 sqlserver sqlserver_odbc db2 oci )
   Rake::TestTask.new("test_#{adapter}") { |t|
     t.libs << "test" << "test/connections/native_#{adapter}"
     t.pattern = "test/*_test{,_#{adapter}}.rb"
