@@ -44,7 +44,7 @@ begin
           select(sql, name).first
         end
 
-        def insert(sql, name = nil, pk = nil, id_value = nil)
+        def insert(sql, name = nil, pk = nil, id_value = nil, sequence_name = nil)
           execute(sql, name = nil)
           id_value || last_insert_id
         end
