@@ -109,7 +109,7 @@ module ActiveRecord
         columns
       end
 
-      def insert(sql, name = nil, pk = nil, id_value = nil)
+      def insert(sql, name = nil, pk = nil, id_value = nil, sequence_name = nil)
         execute(sql, name = nil)
         id_value || @connection.insert_id
       end
