@@ -1,5 +1,6 @@
 class Company < ActiveRecord::Base
   attr_protected :rating
+  set_sequence_name :companies_nonstd_seq
 
   validates_presence_of :name
 end
