@@ -1,9 +1,11 @@
 drop table accounts;
 drop table companies;
 drop table topics;
+drop synonym subjects;
+drop table developers_projects;
+drop table computers;
 drop table developers;
 drop table projects;
-drop table developers_projects;
 drop table customers;
 drop table movies;
 drop table subscribers;
@@ -14,10 +16,36 @@ drop table colnametests;
 drop table mixins;
 drop table people;
 drop table binaries;
-drop table posts;
 drop table comments;
 drop table authors;
-drop table computers;
-drop table categories;
+drop table tasks;
 drop table categories_posts;
-drop sequence rails_sequence;
+drop table categories;
+drop table posts;
+drop table fk_test_has_pk;
+drop table fk_test_has_fk;
+drop sequence accounts_seq;
+drop sequence companies_nonstd_seq;
+drop sequence topics_seq;
+drop sequence developers_seq;
+drop sequence projects_seq;
+drop sequence developers_projects_seq;
+drop sequence customers_seq;
+drop sequence movies_seq;
+drop sequence subscribers_seq;
+drop sequence booleantests_seq;
+drop sequence auto_id_tests_seq;
+drop sequence entrants_seq;
+drop sequence colnametests_seq;
+drop sequence mixins_seq;
+drop sequence people_seq;
+drop sequence binaries_seq;
+drop sequence posts_seq;
+drop sequence comments_seq;
+drop sequence authors_seq;
+drop sequence tasks_seq;
+drop sequence computers_seq;
+drop sequence categories_seq;
+drop sequence categories_posts_seq;
+drop sequence fk_test_has_pk_seq;
+drop sequence fk_test_has_fk_seq;
